# UCV-ATE-SI-LAB02

./: Lab02_Principal_Colab.ipynb  README.md
Lab02_Complementario_Poetry/: pyproject.toml  requirements.txt
Lab02_Complementario_Poetry/src/image_processing/: loader.py  main.py  transform.py
Lab02_Complementario_Poetry/tests/: test_transform.py
