[project]
name = "lab02-complementario-poetry"
version = "0.1.0"
description = "Procesamiento de imagenes con OpenCV"
authors = [
    {name = "Fasidely Chipana",email = "fchipanaca1@ucvvirtual.edu.pe"}
]
requires-python = ">=3.11"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
